--- a/front/public/index.html
+++ b/front/public/index.html
@@ -29,6 +29,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/0e08c1fe84.js" crossorigin="anonymous"></script>
     <title>rootc137</title>
   </head>
   <body>
